@@ -13,6 +13,7 @@ package org.junit.jupiter.params.converter;
 import static org.apiguardian.api.API.Status.STABLE;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.extension.ParameterContext;
 import org.junit.jupiter.params.support.FieldContext;
 import org.junit.platform.commons.util.Preconditions;
@@ -30,7 +31,7 @@ import org.junit.platform.commons.util.ReflectionUtils;
  * @see SimpleArgumentConverter
  */
 @API(status = STABLE, since = "5.10")
-public abstract class TypedArgumentConverter<S, T> implements ArgumentConverter {
+public abstract class TypedArgumentConverter<S, T extends @Nullable Object> implements ArgumentConverter {
 
 	private final Class<S> sourceType;
 	private final Class<T> targetType;
@@ -48,27 +49,30 @@ public abstract class TypedArgumentConverter<S, T> implements ArgumentConverter 
 	}
 
 	@Override
-	public final Object convert(Object source, ParameterContext context) throws ArgumentConversionException {
+	public final @Nullable Object convert(@Nullable Object source, ParameterContext context)
+			throws ArgumentConversionException {
+
 		return convert(source, context.getParameter().getType());
 	}
 
 	@Override
-	public final Object convert(Object source, FieldContext context) throws ArgumentConversionException {
+	public final @Nullable Object convert(@Nullable Object source, FieldContext context)
+			throws ArgumentConversionException {
+
 		return convert(source, context.getField().getType());
 	}
 
-	private T convert(Object source, Class<?> actualTargetType) {
+	private T convert(@Nullable Object source, Class<?> actualTargetType) {
 		if (source == null) {
 			return convert(null);
 		}
 		if (!this.sourceType.isInstance(source)) {
-			String message = String.format(
-				"%s cannot convert objects of type [%s]. Only source objects of type [%s] are supported.",
+			String message = "%s cannot convert objects of type [%s]. Only source objects of type [%s] are supported.".formatted(
 				getClass().getSimpleName(), source.getClass().getName(), this.sourceType.getName());
 			throw new ArgumentConversionException(message);
 		}
 		if (!ReflectionUtils.isAssignableTo(this.targetType, actualTargetType)) {
-			String message = String.format("%s cannot convert to type [%s]. Only target type [%s] is supported.",
+			String message = "%s cannot convert to type [%s]. Only target type [%s] is supported.".formatted(
 				getClass().getSimpleName(), actualTargetType.getName(), this.targetType.getName());
 			throw new ArgumentConversionException(message);
 		}
@@ -85,6 +89,6 @@ public abstract class TypedArgumentConverter<S, T> implements ArgumentConverter 
 	 * @throws ArgumentConversionException if an error occurs during the
 	 * conversion
 	 */
-	protected abstract T convert(S source) throws ArgumentConversionException;
+	protected abstract T convert(@Nullable S source) throws ArgumentConversionException;
 
 }
