@@ -12,7 +12,6 @@ package org.junit.platform.launcher;
 
 import static java.util.Arrays.asList;
 import static org.apiguardian.api.API.Status.STABLE;
-import static org.junit.platform.commons.util.CollectionUtils.toUnmodifiableList;
 
 import java.util.List;
 import java.util.Set;
@@ -20,6 +19,7 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 import org.junit.platform.commons.PreconditionViolationException;
 import org.junit.platform.commons.util.Preconditions;
 import org.junit.platform.engine.FilterResult;
@@ -33,7 +33,7 @@ import org.junit.platform.launcher.tagexpression.TagExpression;
  * <p>Tag expressions are boolean expressions with the following allowed
  * operators: {@code !} (not), {@code &} (and), and {@code |} (or). Parentheses
  * can be used to adjust for operator precedence. Please refer to the
- * <a href="https://junit.org/junit5/docs/current/user-guide/#running-tests-tag-expressions">JUnit 5 User Guide</a>
+ * <a href="https://junit.org/junit5/docs/current/user-guide/#running-tests-tag-expressions">JUnit User Guide</a>
  * for usage examples.
  *
  * <p>Please note that a tag name is a valid tag expression. Thus, wherever a tag
@@ -140,12 +140,11 @@ public final class TagFilter {
 	}
 
 	private static String inclusionReasonExpressionSatisfy(List<String> tagExpressions) {
-		return String.format("included because tags match expression(s): [%s]", formatToString(tagExpressions));
+		return "included because tags match expression(s): [%s]".formatted(formatToString(tagExpressions));
 	}
 
 	private static String exclusionReasonExpressionNotSatisfy(List<String> tagExpressions) {
-		return String.format("excluded because tags do not match tag expression(s): [%s]",
-			formatToString(tagExpressions));
+		return "excluded because tags do not match tag expression(s): [%s]".formatted(formatToString(tagExpressions));
 	}
 
 	private static PostDiscoveryFilter excludeMatching(List<String> tagExpressions) {
@@ -161,11 +160,11 @@ public final class TagFilter {
 	}
 
 	private static String inclusionReasonExpressionNotSatisfy(List<String> tagExpressions) {
-		return String.format("included because tags do not match expression(s): [%s]", formatToString(tagExpressions));
+		return "included because tags do not match expression(s): [%s]".formatted(formatToString(tagExpressions));
 	}
 
 	private static String exclusionReasonExpressionSatisfy(List<String> tagExpressions) {
-		return String.format("excluded because tags match tag expression(s): [%s]", formatToString(tagExpressions));
+		return "excluded because tags match tag expression(s): [%s]".formatted(formatToString(tagExpressions));
 	}
 
 	private static String formatToString(List<String> tagExpressions) {
@@ -173,10 +172,10 @@ public final class TagFilter {
 	}
 
 	private static List<TagExpression> parseAll(List<String> tagExpressions) {
-		return tagExpressions.stream().map(TagFilter::parse).collect(toUnmodifiableList());
+		return tagExpressions.stream().map(TagFilter::parse).toList();
 	}
 
-	private static TagExpression parse(String tagExpression) {
+	private static TagExpression parse(@Nullable String tagExpression) {
 		return TagExpression.parseFrom(tagExpression).tagExpressionOrThrow(
 			message -> new PreconditionViolationException(
 				"Unable to parse tag expression \"" + tagExpression + "\": " + message));
