@@ -11,7 +11,6 @@
 package org.junit.platform.suite.engine;
 
 import static org.junit.platform.commons.support.AnnotationSupport.findAnnotatedMethods;
-import static org.junit.platform.commons.util.CollectionUtils.toUnmodifiableList;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
@@ -59,13 +58,13 @@ final class LifecycleMethodUtils {
 							.and(isNotPrivate(annotationType, issueReporter)) //
 							.and(hasNoParameters(annotationType, issueReporter)) //
 							.toPredicate()) //
-				.collect(toUnmodifiableList());
+				.toList();
 	}
 
 	private static DiscoveryIssueReporter.Condition<Method> isStatic(Class<? extends Annotation> annotationType,
 			DiscoveryIssueReporter issueReporter) {
 		return issueReporter.createReportingCondition(ModifierSupport::isStatic, method -> {
-			String message = String.format("@%s method '%s' must be static.", annotationType.getSimpleName(),
+			String message = "@%s method '%s' must be static.".formatted(annotationType.getSimpleName(),
 				method.toGenericString());
 			return createError(message, method);
 		});
@@ -74,7 +73,7 @@ final class LifecycleMethodUtils {
 	private static DiscoveryIssueReporter.Condition<Method> isNotPrivate(Class<? extends Annotation> annotationType,
 			DiscoveryIssueReporter issueReporter) {
 		return issueReporter.createReportingCondition(ModifierSupport::isNotPrivate, method -> {
-			String message = String.format("@%s method '%s' must not be private.", annotationType.getSimpleName(),
+			String message = "@%s method '%s' must not be private.".formatted(annotationType.getSimpleName(),
 				method.toGenericString());
 			return createError(message, method);
 		});
@@ -83,7 +82,7 @@ final class LifecycleMethodUtils {
 	private static DiscoveryIssueReporter.Condition<Method> returnsPrimitiveVoid(
 			Class<? extends Annotation> annotationType, DiscoveryIssueReporter issueReporter) {
 		return issueReporter.createReportingCondition(ReflectionUtils::returnsPrimitiveVoid, method -> {
-			String message = String.format("@%s method '%s' must not return a value.", annotationType.getSimpleName(),
+			String message = "@%s method '%s' must not return a value.".formatted(annotationType.getSimpleName(),
 				method.toGenericString());
 			return createError(message, method);
 		});
@@ -92,8 +91,8 @@ final class LifecycleMethodUtils {
 	private static DiscoveryIssueReporter.Condition<Method> hasNoParameters(Class<? extends Annotation> annotationType,
 			DiscoveryIssueReporter issueReporter) {
 		return issueReporter.createReportingCondition(method -> method.getParameterCount() == 0, method -> {
-			String message = String.format("@%s method '%s' must not accept parameters.",
-				annotationType.getSimpleName(), method.toGenericString());
+			String message = "@%s method '%s' must not accept parameters.".formatted(annotationType.getSimpleName(),
+				method.toGenericString());
 			return createError(message, method);
 		});
 	}
